Контроль комп'ютерної грамотності

--- a/application/style/dashboard.css
+++ b/application/style/dashboard.css
@@ -23,7 +23,7 @@ and open the template in the editor.
 }
 
 input[name='cancel_change'], input[name='edit_qa'], #test_manage, 
-input[name='cancel_u_change'], input[name='edit_name'], input[name='edit_email']{
+input[name='cancel_u_change'], input[name='edit_name'], input[name='edit_email'],#qa-status, .user-status{
     display: none;
 }
 
